--- a/src/Pages/FriendRefferd/Enrolled/Enrolled.css
+++ b/src/Pages/FriendRefferd/Enrolled/Enrolled.css
@@ -1,3 +1,6 @@
+.enrolledWrap {
+  margin-bottom: 60px;
+}
 .coursedWrap {
   background: linear-gradient(270deg, #800080 0%, #ff864c 100%);
   border-radius: 20px;
