--- a/src/Pages/FriendRefferd/Banner/Banner.css
+++ b/src/Pages/FriendRefferd/Banner/Banner.css
@@ -1,16 +1,25 @@
 .bannerWrap {
   margin-bottom: 50px;
 }
-.history {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  color: #000000;
-  text-align: start;
+.friendReferredHistory {
   margin-top: 30px;
   margin-bottom: 25px;
+}
+.goBack {
+  text-align: start;
+  margin-bottom: 20px;
+}
+.goBack a {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #800080;
+  text-decoration: none;
+}
+.goBack span {
+  margin-left: 5px;
 }
 .referCode h5 {
   font-family: "Poppins";
